3rd Version of site

--- a/stylez.css
+++ b/stylez.css
@@ -3,9 +3,9 @@ padding: 0;}
 
 @font-face {
     font-family: Montserrat;
-    src: url('/fonts/montserrat-regular.eot');
-    src: url('/fonts/montserrat-regular.ttf') format('truetype'),
-    url('/fonts/montserrat-regular.woff') format('woff');
+    src: url('./fonts/montserrat-regular.eot');
+    src: url('./fonts/montserrat-regular.ttf') format('truetype'),
+    url('./fonts/montserrat-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -267,7 +267,7 @@ header {
     color: #12C868;
     text-decoration: none;
     border-bottom: 1px dotted #12C868;
-    display: block
+    display: block;
     top: 21vh;
     left: 77.1vw;
 }
@@ -519,7 +519,7 @@ input#user_phone::-webkit-input-placeholder {
     width: 31.5937vw;
     font-style: normal;
     font-weight: 300;
-    font-size: 4.5833em;
+    font-size: 4.1833em;
     line-height: 1.5454;
     text-align: justify;
     color: #1C1C1C;
@@ -593,7 +593,7 @@ input#user_phone::-webkit-input-placeholder {
 }
 .calculateTheCostButton {
     display: flex;
-    flex-basis: 11.69375vw;
+    flex-basis: 12.69375vw;
     height: 4.074vh;
     font-style: normal;
     font-weight: 600;
