--- a/stylez.css
+++ b/stylez.css
@@ -11,7 +11,8 @@ html, body {height: 100%}
 }
 body {
     font-family: Montserrat, sans-serif;
-    background: url(images/BG.png) no-repeat;
+    background: url(images/BG.png) 0 0/100% 100% no-repeat fixed;
+
     font-size: 12px;
     margin: 0;
     padding: 0;
@@ -508,8 +509,14 @@ input#user_phone::-webkit-input-placeholder {
     font-size: 1.1666em;
     line-height: 1.5714;
     color: #1C1C1C;
+    transition: background-color 1s ease 0s;
+    border-radius: 39px;
+    background-color: transparent;
 }
-
+.leftSidebar li:hover {
+    background: #fed5b2;
+    transition: background-color 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
+}
 .main-content {
     display: flex;
     flex-direction: column;
@@ -676,7 +683,7 @@ input#user_phone::-webkit-input-placeholder {
         width: 188px;
     }
 }*/
-.Header__menu {
+.Header__menu, .main__content__body__mobile {
     display: none;
 }
 
@@ -692,36 +699,64 @@ input#user_phone::-webkit-input-placeholder {
 }
 @media (max-width: 1366px) {}
 @media (max-width: 1280px) {}
+@media (max-width: 960px) and (max-height: 1800px) {
+    body {
+        background: url("./images/background-image-mobile-960-1800.png") 0 0 no-repeat fixed;
+    }
+}
+@media (max-width: 640px) and (max-height: 1200px) {
+    body {
+        background: url("./images/background-image-mobile-640-1200.png") 0 0 no-repeat fixed;
+    }
+}
+@media (max-width: 480px) and (max-height: 900px) {
+    body {
+        background: url("./images/background-image-mobile-480-900.png") 0 0 no-repeat fixed;
+    }
+}
+@media (max-width: 320px) and (max-height: 600px) {
+    body {
+        background: url("./images/background-image-mobile-320-600.png") 0 0 no-repeat fixed;
+    }
+}
 @media (min-width: 768px) and (max-width: 1279px) {}
 .header__body__mobile {
     display: none;
 }
 @media (max-width: 767px) and (orientation: portrait) {
+
     body.lock {
         overflow: hidden;
     }
+
     .menu-main, .hat {
         display: none;
     }
+
     .logoImage {
         max-width: 24.511vw;
         z-index: 2;
     }
+
     .telefonBlock {
         z-index: 2;
     }
+
     .container {
         max-width: 83.125vw;
     }
+
     .wrapper {
         max-width: 100vw;
         min-height: 100vh;
         flex-wrap: wrap;
         justify-content: center;
     }
+
     .container {
         max-width: none;
     }
+
     header {
         position: fixed;
         width: 97vw;
@@ -732,16 +767,18 @@ input#user_phone::-webkit-input-placeholder {
         right: 10px;
         z-index: 50;
     }
+
     header:before {
         content: '';
         position: absolute;
-        width: 100%;/*83.125%;*/
+        width: 100%; /*83.125%;*/
         height: 100%;
         top: 0;
         left: 0;
         background: #fff;
         z-index: 2;
     }
+
     .header__body__mobile {
         display: flex;
         justify-content: space-between;
@@ -750,6 +787,7 @@ input#user_phone::-webkit-input-placeholder {
         position: relative;
         /*z-index: 2;*/
     }
+
     .header__burger {
         display: block;
         position: relative;
@@ -757,6 +795,7 @@ input#user_phone::-webkit-input-placeholder {
         height: 30px;
         z-index: 3;
     }
+
     .header__burger:before, .header__burger:after {
         content: '';
         background: #1C1C1C;
@@ -766,12 +805,15 @@ input#user_phone::-webkit-input-placeholder {
         left: 0;
         transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
     }
+
     .header__burger:before {
         top: 0;
     }
+
     .header__burger:after {
         bottom: 0;
     }
+
     .header__burger span {
         position: absolute;
         background: #1C1C1C;
@@ -781,17 +823,21 @@ input#user_phone::-webkit-input-placeholder {
         top: 13px;
         transition: all 0.3s ease-in-out 0s;
     }
+
     .header__burger.active:before {
         transform: rotate(45deg);
         top: 13px;
     }
+
     .header__burger.active:after {
         transform: rotate(-45deg);
         bottom: 13px;
     }
+
     .header__burger.active span {
         transform: scale(0);
     }
+
     .Header__menu {
         top: -100%;
         position: fixed;
@@ -801,11 +847,13 @@ input#user_phone::-webkit-input-placeholder {
         width: 100%;
         height: 88%;
         transition: all 0.5s ease-out 0s;
-       /* background: #18b5a4;*/
+        /* background: #18b5a4;*/
     }
+
     .Header__menu.active {
         top: 19.2035vw;
     }
+
     .Header__list {
         flex-direction: column;
         justify-content: space-evenly;
@@ -814,62 +862,332 @@ input#user_phone::-webkit-input-placeholder {
         position: relative;
         z-index: 2;
         list-style: none;
-        font-size: 10px;
+        font-size: 1.3054vw;
         color: #1C1C1C;
     }
+
     .Header__list li {
         font-size: 30px;
     }
+
     .homeImage {
         width: 36px;
         height: 34px;
     }
+
     li.descriptionContainer {
         font-size: 23px;
         width: 71vw;
     }
+
     .descriptionContainer {
         width: 63.155vw;
         text-align: center;
     }
-    .mainContentWrapper {
-        display: none;
-    }
+
     .pdfDownloadLink {
         flex-basis: 52vw;
         font-size: 24px;
     }
+
     .price-catalog {
         width: 83vw;
         justify-content: space-evenly;
     }
+
     .answerOnline {
         font-size: 24px;
         width: 30vw;
         flex-basis: 19vh;
     }
+
     .answerInMessengers {
         justify-content: space-between;
         flex-basis: 20vw;
     }
+
     .iconDisk {
         flex-basis: 14vw;
         height: 14vw;
         border-radius: 50px;
     }
+
     .messengers {
         width: 55vw;
     }
+
     .smallDisk {
         flex-basis: 1.0589vw;
         height: 1.0589vw;
     }
-    .messengers>li.viber img, .messengers>li.whatsup img{
+
+    .messengers > li.viber img, .messengers > li.whatsup img {
         /*flex-basis: 1.0046vw;*/
         height: 6.9vw;
     }
-    .messengers>li.telegram img {
-    height: 5vw;
+
+    .messengers > li.telegram img {
+        height: 5vw;
+    }
+
+    .leftSidebar, .main-content {
+        display: none;
+    }
+
+    .mainContentWrapper {
+        padding-top: 12.207vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        height: 87.7929vh;
+    }
+
+    .main__content__body__mobile {
+        display: flex;
+        flex-direction: column;
+        height: 90.7929vh;
+        width: 100vw;
+        justify-content: space-evenly;
+        align-items: center;
+        opacity: 1;
+        transition: all 0.3s ease-in 0s;
+    }
+
+    .main__content__body__mobile.active {
+        opacity: 0;
+    }
+
+    .mainHeader {
+        width: 100vw;
+        font-size: 5.7441vw;
+        line-height: 1.5454;
+        text-align: center;
+    }
+
+    .mainHeaderRounds {
+        width: 75vw;
+    }
+
+    .greenRound100, .greenRound75, .greenRound50, .greenRound25 {
+        flex-basis: 2.8352vw;
+        height: 2.8352vw;
+        border-width: 2px;
+    }
+
+    .mainHeaderDescription {
+        width: 30vw;
+        height: 3.6111vh;
+        font-size: 1.875em;
+    }
+
+    .fingerPrint {
+        flex-basis: 3.3312vw;
+        height: 0.8427vh;
+    }
+
+    .answerSomeQuestions {;
+        font-size: 2.5vw;
+        width: 57vw;
+    }
+
+    .backGroundCalculateTheCost {
+        flex-basis: 12.2592vw;
+        width: 43.25vh;
+        justify-content: space-evenly;
+    }
+
+    .backGroundCheckInForLookingHouses {
+        flex-basis: 12.2592vw;
+        width: 43.25vh;
+        justify-content: space-evenly;
+    }
+
+    .calculateTheCostButton {
+        display: flex;
+        flex-basis: 31.69375vw;
+    }
+
+    .arrowTopRight {
+        flex-basis: 3.5vw;
+        height: 3.5vw;
+    }
+
+    .checkInForLookingHousesButton {
+        flex-basis: 26.7029vw;
+    }
+
+    .leftSidebarMobilePopup {
+        display: flex;
+        background: url("./images/form.svg");
+        width: 52.5vw;
+        opacity: 1;
+        transition: all 0.5s ease 0s;
+    }
+
+    .leftSidebarMobilePopup.activate {
+        opacity: 0;
+        transition: all 0.8s ease-in 0s;
+    }
+
+    .leftSidebarMobilePopupDescriptionBlock {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 44vw;
+        height: 12vh;
+        justify-content: space-between;
+    }
+
+    .leftSidebarMobilePopupDescription1 {
+        width: 22.25vw;
+    }
+
+    .leftSidebarMobilePopupDescription2 {
+        font-size: 1.875vw;
+        color: #b5b5b5;
+    }
+
+    .RoundCross {
+        background: #F38120;
+        border-radius: 50px;
+        width: 65px;
+        height: 65px;
+        position: relative;
+    }
+
+    .RoundCross:before, .RoundCross:after {
+        content: '';
+        background: #ffffff;
+        position: absolute;
+        width: 50%;
+        height: 8px;
+        left: 0;
+        transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
+    }
+
+    .RoundCross:after {
+        content: '';
+        background: #ffffff;
+        position: absolute;
+        height: 50%;
+        width: 8px;
+        left: 0;
+        transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
+    }
+
+    .RoundCross:before {
+        top: 29px;
+        left: 17px;
+    }
+
+    .RoundCross:after {
+        top: 22px;
+        left: 29px;
+    }
+
+    .leftSidebarMobile > .RoundCross {
+        align-self: start;
+        margin-top: 4vh;
+    }
+
+    .RoundCross.activate:before {
+        top: 29px;
+        left: 17px;
+        transform: rotate(-300deg);
+    }
+
+    .RoundCross.activate:after {
+        top: 17px;
+        left: 29px;
+        transform: rotate(30deg);;
+    }
+
+    .leftSidebarMobile {
+        bottom: -100%;
+        position: fixed;
+        overflow: auto;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 59.3125vw;
+        height: 47.1666vh;
+        border-radius: 25px;
+        transition: all 1.5s cubic-bezier(.1, .9, .9, .1) /*cubic-bezier(0.22, 0.81, 0.01, 0.99)*/ 0s;
+        background: #ffffff;
+    }
+
+    .leftSidebarMobileList {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        list-style: none;
+        flex-basis: 23vh;
+        font-size: 2.329vw;
+        height: 39.1666vh;
+    }
+
+    .leftSidebarMobile.activate {
+        background-color: #ffe9d5;
+        bottom: 0%;
+        transition: all 1.8s cubic-bezier(.1, .9, .9, .1) 0s;
+    }
+
+    .b-popup-content {
+        flex-basis: 57.6458vw;
+        height: 52.1851vh;
+    }
+
+    .popUpHeader {
+        width: 53vw;
+    }
+
+    .popUpHeaderDescription {
+        width: 46vw;
+        font-size: 1.8333em;
+    }
+
+    .popUpHeaderGrafikRaboti {
+        font-size: 1.63em;
+        width: 46vw;
+    }
+
+    .popUpHeaderTypeTelefon {
+        font-size: 1.6333em;
+        width: 38vw;
+    }
+
+    .phone_form {
+        flex-basis: 36vw
+    }
+    .user_phone {
+        font-size: 1.6333em;
+    }
+    #user_phone {
+        padding: 8px 0px 8px 12px;
+    }
+    .background_btn_submit {
+        flex-basis: 6.8703vh;
+        width: 37.5416vw;
+    }
+    .callMePopUp {
+        display: flex;
+        flex-basis: 24.0312vw;
+    }
+    .btn_submit {
+        flex-basis: 18.0312vw;
+        margin-right: -18.0312vw;
+    }
+    .agreementFlex {
+        width: 54vw;
+    }
+    .licenseAgreementBlock {
+        flex-basis: 43.6145vw;
+    }
+    .licenseAgreementDownloadLink {
+        display: flex;
+        width: 37vw;
+    }
+    .agreement {
+        transform: scale(2.8);
     }
 }
 @media (max-width: 600px) {
@@ -917,6 +1235,7 @@ input#user_phone::-webkit-input-placeholder {
     .messengers>li.telegram img {
         height: 4vw;
     }
+
 }
     @media (max-width: 320px) {
 
