--- a/stylez.css
+++ b/stylez.css
@@ -281,6 +281,9 @@ ul.menu-main li > * {
     top: 21vh;
     left: 77.1vw;
 }
+.callMe.activate {
+    pointer-events: none;
+}
 .beauty-rotate {
     overflow: hidden;
     -webkit-transition: all 0.5s ease;
