--- a/stylez.css
+++ b/stylez.css
@@ -11,7 +11,7 @@ html, body {height: 100%}
 }
 body {
     font-family: Montserrat, sans-serif;
-    background: url(images/BG.png) 0 0/100% 100% no-repeat fixed;
+    background: no-repeat center/cover url(images/BG.png);
 
     font-size: 12px;
     margin: 0;
@@ -294,7 +294,9 @@ ul.menu-main li > * {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
 }
-
+#popup1 {
+    display: none;
+}
 .b-popup{
     display: flex;
     max-width: 100vw;
@@ -502,6 +504,7 @@ input#user_phone::-webkit-input-placeholder {
     color: #F38120;
 }
 .leftSidebar {
+    flex-wrap: wrap;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -673,8 +676,7 @@ input#user_phone::-webkit-input-placeholder {
 .answerSomeQuestions {
     display: flex;
     flex-basis: 12.187vw;
-    height: 8.1481vh;
-
+    height: 12.1481vh;
     font-style: normal;
     font-size: 1.1666em;
     line-height: 1.57;
@@ -688,16 +690,60 @@ input#user_phone::-webkit-input-placeholder {
     height: 1.6222vh;
     background: #1C1C1C;
 }
-/*@media (min-width: 1921px) {
-    .logoImageAdaptive {
-        height: 125px;
-        width: 188px;
-    }
-}*/
 .Header__menu, .main__content__body__mobile {
     display: none;
 }
-
+@media (max-height: 898px) and (max-width: 1920px) {
+    .mainContentWrapper {
+        display: flex;
+        justify-content: space-between;
+        width: 72vw;
+    }
+    .main-content {
+        justify-content: space-between;
+        width: 46vw;
+    }
+    .mainHeader {
+        flex-basis: 5.6111vh;
+        width: 65.5937vw;
+        font-size: 2.1833em;
+    }
+    .mainHeaderRounds {
+        width: 16.6421vw;
+        height: 48px;
+    }
+    .mainHeaderDescription {
+        width: 12.8229vw;
+        font-size: 2em;
+        height: 7.6111vh;
+    }
+    .buttons {
+        height: 101px;
+    }
+    .backGroundCalculateTheCost, .backGroundCheckInForLookingHouses {
+        height: 88px;
+    }
+    .answerSomeQuestionsContainer {
+        width: 54vw;
+        justify-content: space-between;
+        height: 74px;
+        align-items: center;
+    }
+    .answerSomeQuestions {
+        width: 33vw;
+        flex-basis: 49.187vw;
+        font-size: 1.25666em;
+    }
+    .calculateTheCostButton, .checkInForLookingHousesButton {
+        height: unset;
+    }
+    .fingerPrint {
+        height: 17px;
+    }
+    .mainHeader {
+        flex-basis: 8.6111vh;
+    }
+}
 @media (min-width: 768px) and (max-width: 1440px) {
     .logoImageAdaptive {
         height: 93px;
@@ -708,26 +754,24 @@ input#user_phone::-webkit-input-placeholder {
         max-width: 141px;
     }
 }
-@media (max-width: 1366px) {}
-@media (max-width: 1280px) {}
 @media (max-width: 960px) and (max-height: 1800px) {
     body {
-        background: url("./images/background-image-mobile-960-1800.png") 0 0 no-repeat fixed;
+        background: no-repeat center/cover url("./images/background-image-mobile-960-1800.png");
     }
 }
 @media (max-width: 640px) and (max-height: 1200px) {
     body {
-        background: url("./images/background-image-mobile-640-1200.png") 0 0 no-repeat fixed;
+        background: no-repeat center/cover url("./images/background-image-mobile-640-1200.png");
     }
 }
 @media (max-width: 480px) and (max-height: 900px) {
     body {
-        background: url("./images/background-image-mobile-480-900.png") 0 0 no-repeat fixed;
+        background: no-repeat center/cover url("./images/background-image-mobile-480-900.png");
     }
 }
 @media (max-width: 320px) and (max-height: 600px) {
     body {
-        background: url("./images/background-image-mobile-320-600.png") 0 0 no-repeat fixed;
+        background: no-repeat center/cover url("./images/background-image-mobile-320-600.png");
     }
 }
 @media (min-width: 769px) and (max-width: 1279px) {}
@@ -3343,6 +3387,22 @@ input#user_phone::-webkit-input-placeholder {
         width: 73vw;
     }
 }
+@media (orientation: portrait) and (max-width: 375px) {
+    .answerOnline {
+        flex-basis: 26vh;
+    }
+    .answerOnlineBlock {
+        width: 53vw;
+    }
+    .leftSidebarMobileList {
+        height: 45.1666vh;
+        flex-basis: 24vh;
+    }
+    .leftSidebarMobileList {
+        height: 45.1666vh;
+        flex-basis: 24vh;
+    }
+}
 @media (orientation: portrait) and (max-width: 373px) {
     li.descriptionContainer {
         width: 72vw;
@@ -3389,8 +3449,6 @@ input#user_phone::-webkit-input-placeholder {
     .answerOnlineBlock {
         width: 50vw;
     }
-}
-@media (orientation: portrait) and (max-width: 368px) {
     li.descriptionContainer {
         width: 74vw;
     }
